use js modules, not finished

--- a/website/index.html
+++ b/website/index.html
@@ -24,24 +24,24 @@
     <div id="wrapper">
         <header id="header">
             <div id="header-main" class="dev-change">
-                <h1 id="mainPageTrigger" onclick="appPage.onClickMainPage()">11. Sense</h1>
-                <p onclick="appPage.onClickMainPage()"><span class="notranslate">Discover</span> ♡ <span class="notranslate">Learning</span></p>
+                <h1 id="mainPageTrigger">11. Sense</h1>
+                <p id="mainPageTriggerSubheadding"><span class="notranslate">Discover</span> ♡ <span class="notranslate">Learning</span></p>
             </div>
-            <figure id="header-left" onclick="appPage.onClickStatsPage()" class="inactive-page-icon">
+            <figure id="header-left" class="inactive-page-icon">
                 <img id="stats-image" alt="Statistics" src="img/stats_100x100.png" />
             </figure>
-            <figure id="header-right" onclick="appPage.onClickNavPage()" class="inactive-page-icon">
+            <figure id="header-right" class="inactive-page-icon">
                 <img id="settings-image" alt="Settings" src="img/settings_200x200b.png" />
             </figure>
         </header>
         <div id="content">
-            <div id="Solution" style="display: none;" onclick="appPage.toggleSolution()">
+            <div id="Solution" style="display: none;">
                 <h2>Solutions</h2>
                 <h3 id="Solution-task" translate="no" class="notranslate"></h3>
                 <p id="partial-solutions" translate="no" class="notranslate"></p>
             </div>
             <div id="nav" class="hidden page">
-                <h2><select name="settings-selector" id="settings-selector" class="selector dev-change" onchange="appPage.setNavPageLocation()">
+                <h2><select name="settings-selector" id="settings-selector" class="selector dev-change">
                     <option value="settings-basic">Basic Settings</option>
                     <option value="settings-advanced" >More Settings</option>
                     <option value="settings-dev" class="hidden dev-hidden" >Development</option>
@@ -51,7 +51,7 @@
                         <li><button disabled class="option-item" id="levelModeButton" title="Select your experience level.">Level<span id="level-button-status" class=" b-label-status notranslate" translate="no">1</span><br /><span
                             class="button-sub">(select difficulty)</span></button>
                         </li>
-                        <li><button class="option-item" id="button-conversation" title="Talk with Dorie." onclick="appConversation.toggleConversation()">Conversation<span
+                        <li><button class="option-item" id="button-conversation" title="Talk with Dorie.">Conversation<span
                             class="hidden  b-label-status" id="button-conversation-on">on</span><span
                             id="button-conversation-off" class=" b-label-status">off</span><br /><span
                             class="button-sub">(talk with Dorie)</span></button>
@@ -71,14 +71,14 @@
                                     id="button-decimal-places-off" class=" b-label-status">off</span><br /><span
                                     class="button-sub">(random)</span></button>
                         </li>
-                        <li><button class="option-item" id="button-voice" title="Use voice recognition instead of keyboard input." onclick="appPage.enterFullscreen();appVoice.toggleVoiceMode()">Dorie listens<span class="hidden  b-label-status" id="button-voice-on">on</span><span id="button-voice-off" class=" b-label-status">off</span><br /><span
+                        <li><button class="option-item" id="button-voice" title="Use voice recognition instead of keyboard input.">Dorie listens<span class="hidden  b-label-status" id="button-voice-on">on</span><span id="button-voice-off" class=" b-label-status">off</span><br /><span
                             class="button-sub">(talk to Dorie with your voice)</span></button>
                         </li>
-                        <li><button class="option-item" id="soundMode" title="Use audio output for tasks and status feedback." onclick="appSound.toggleSoundMode();">Dorie speaks<span class="hidden  b-label-status" id="sound-button-on">on</span><span id="sound-button-off" class=" b-label-status">off</span><br /><span class="button-sub">(get audio feedback for tasks)</span></button>
+                        <li><button class="option-item" id="button-sound" title="Use audio output for tasks and status feedback.">Dorie speaks<span class="hidden  b-label-status" id="sound-button-on">on</span><span id="sound-button-off" class=" b-label-status">off</span><br /><span class="button-sub">(get audio feedback for tasks)</span></button>
                         </li>
                         <li>
                             <button class="option-item">
-                                <span class="config-label">Break Length</span><span class=" b-label-status notranslate" translate="no"><select name="auto-task-selector" id="auto-task-selector" class="selector config" dir="rtl" onchange="appSolution.saveAutoTaskInterval()">
+                                <span class="config-label">Break Length</span><span class=" b-label-status notranslate" translate="no"><select name="auto-task-selector" id="auto-task-selector" class="selector config" dir="rtl">
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="5" selected="selected">5</option>
@@ -94,7 +94,7 @@
                         </li>
                         <li>
                             <button class="option-item">
-                                <span class="config-label">Solution Guide</span><span class=" b-label-status"><select name="solution-guide-selector" id="solution-guide-selector" class="selector config" dir="rtl" onchange="appSolution.saveSolutionGuideInterval()">
+                                <span class="config-label">Solution Guide</span><span class=" b-label-status"><select name="solution-guide-selector" id="solution-guide-selector" class="selector config" dir="rtl">
                                     <option value="off" translate="yes">off</option>
                                     <option value="5" class="notranslate" translate="no">5</option>
                                     <option value="10" class="notranslate" translate="no">10</option>
@@ -110,16 +110,14 @@
                         </li>
                         <li>
                             <button class="option-item">
-                                <span class="config-label">Number Ranges:</span><span class=" b-label-status notranslate" translate="no"><input class="config" type="number" id="f1" name="factor1" placeholder="1" value="1" onblur="if(this.value==''){this.value=this.placeholder}" onclick="if(this.value != ''){this.placeholder=this.value;this.value=''};"
-                                oninput="appMath.newTask(false)" />⋅<input class="config" type="number" id="f2" name="factor2" placeholder="1" value="1" onblur="if(this.value==''){this.value=this.placeholder}" onclick="if(this.value != ''){this.placeholder=this.value;this.value=''};"
-                                oninput="appMath.newTask(false)" /></span><br /><span
+                                <span class="config-label">Number Ranges:</span><span class=" b-label-status notranslate" translate="no"><input class="config" type="number" id="f1" name="factor1" placeholder="1" value="1" onblur="if(this.value==''){this.value=this.placeholder}" onclick="if(this.value != ''){this.placeholder=this.value;this.value=''};" />⋅<input class="config" type="number" id="f2" name="factor2" placeholder="1" value="1" onblur="if(this.value==''){this.value=this.placeholder}" onclick="if(this.value != ''){this.placeholder=this.value;this.value=''};" /></span><br /><span
                                 class="button-sub">(2⋅3=xx⋅yyy)</span>
                             </button>
                         </li>
-                        <li><button disabled class="option-item" id="impress" title="Print legal information and credits.">Legal Notice<br /><span
+                        <li><button disabled class="option-item" id="button-impress" title="Print legal information and credits.">Legal Notice<br /><span
                                         class="button-sub">(Imprint)</span></button>
                         </li>
-                        <li><button class="option-item" id="impress" title="Get information about how to contact." onclick="window.open('https://paypal.me/pools/c/8pfcrOnyif')">Feedback, Bugs<br />& Support..</button>
+                        <li><button class="option-item" id="button-feedback" title="Get information about how to contact.">Feedback, Bugs<br />& Support..</button>
                         </li>
                     </ul>
                 </div>
@@ -133,7 +131,7 @@
                 </div>
             </div>
             <div id="stats" class="hidden page">
-                <h2><select name="display-selector" id="display-selector" class="selector dev-change" onchange="appPage.setStatsPageLocation()">
+                <h2><select name="display-selector" id="display-selector" class="selector dev-change">
                     <option value="stats-history">History</option>
                     <option value="stats-loggings" class="hidden dev-hidden" >Loggings</option>
                 </select></h2>
@@ -152,11 +150,11 @@
             </div>
             <div id="trainer-page" class="page">
                 <section id="task" translate="no" class="notranslate">
-                    <p><span id="current-task" onclick="appMath.newTask()"></span></p>
+                    <p><span id="current-task"></span></p>
                 </section>
                 <section id="input" class="speech">
                     <img id="mic-image" class="hidden" src="img/32px-Font_Awesome_5_solid_microphone-alt.svg.png" />
-                    <input type="number" id="solution" name="solution" placeholder="=" onkeyup="Main.guessInput()" onclick="appVoice.startRecognition()" onselect="return false;" onfocus="return false;" />
+                    <input type="number" id="solution" name="solution" placeholder="=" onselect="return false;" onfocus="return false;" />
                 </section>
                 <section id="clipboard">
                 </section>
