add bunch control panel

--- a/website/index.html
+++ b/website/index.html
@@ -12,12 +12,6 @@
     <link rel="stylesheet" type="text/css" href="styles/desktop.css" media='screen and (min-width: 1100px)' />
     <link rel="stylesheet" type="text/css" href="styles/global.css" />
     <link rel="stylesheet" type="text/css" href="styles/themes/dark.css" />
-    <!-- <script src="js/main/main.js"></script> -->
-    <!-- <script src="js/conversation/sound.js"></script> -->
-    <!-- <script src="js/math/math.js"></script> -->
-    <!-- <script src="js/page/page.js"></script> -->
-    <!-- <script src="js/page/subpage.js"></script> -->
-    <!-- <script src="js/statistics/statistics.js"></script> -->
 </head>
 
 <body translate="yes">
@@ -151,6 +145,7 @@
             <div id="trainer-page" class="page">
                 <section id="task" translate="no" class="notranslate">
                     <p><span id="current-task"></span></p>
+                    <panel-bunch-control></panel-bunch-control>
                 </section>
                 <section id="input" class="speech">
                     <img id="mic-image" class="hidden" src="img/32px-Font_Awesome_5_solid_microphone-alt.svg.png" />
@@ -173,18 +168,6 @@
         }
     </script>
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-    <!-- <script src="js/main/system.js"></script> -->
-    <!-- <script src="js/dev/dev-view.js"></script> -->
-    <!-- <script src="js/main/main_events.js"></script> -->
-    <!-- <script src="js/task/task-view.js"></script> -->
-    <!-- <script src="js/conversation/sound_events.js"></script> -->
-    <!-- <script src="js/conversation/voice.js"></script> -->
-    <!-- <script src="js/conversation/conversation.js"></script> -->
-    <!-- <script src="js/math/math_event.js"></script> -->
-    <!-- <script src="js/statistics/statistics_event.js"></script> -->
-    <!-- <script src="js/task/solution-view.js"></script> -->
-    <!-- <script src="js/page/page_event.js"></script> -->
-    <!-- <script src="js/notification/onboarding.js"></script> -->
 </body>
 
 </html>
