--- a/website/index.html
+++ b/website/index.html
@@ -179,7 +179,7 @@
     </div>
     <script src="js/app.js" type="module"></script>
     <!-- <script type="text/javascript" src="js/language/translation.js"></script> -->
-    <script>
+    <!-- <script>
         function googleTranslateElementInit() {
             new google.translate.TranslateElement({
                 // pageLanguage: 'en',
@@ -187,8 +187,8 @@
                 defaultlanguage: "en"
             }, 'google_translate_element');
         }
-    </script>
-    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    </script> -->
+    <!-- <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
 </body>
 
 </html>
