--- a/website/index.html
+++ b/website/index.html
@@ -166,7 +166,7 @@
             <div id="trainer-page" class="page">
                 <section id="task" translate="no" class="notranslate">
                     <panel-bunch-control></panel-bunch-control>
-                    <p><span id="current-task"></span></p>
+                    <view-task></view-task>
                 </section>
                 <section id="input" class="speech">
                     <img id="mic-image" class="hidden" src="img/32px-Font_Awesome_5_solid_microphone-alt.svg.png" />
