--- a/website/index.html
+++ b/website/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="content-language" content="en" />
-    <title>Dorie Agile Math</title>
+    <title>11. Sense</title>
     <link rel="shortcut icon" type="image/png" href="img/settings.png" />
     <link rel="stylesheet" type="text/css" href="styles/global.css" />
     <link rel="stylesheet" type="text/css" href="styles/mobile.css" media="screen and (max-width: 649px)" />
@@ -168,12 +168,9 @@
                     <panel-bunch-control></panel-bunch-control>
                     <view-task></view-task>
                 </section>
-                <section id="input" class="speech">
-                    <img id="mic-image" class="hidden" src="img/32px-Font_Awesome_5_solid_microphone-alt.svg.png" />
-                    <input type="number" id="solution" name="solution" placeholder="=" onselect="return false;" onfocus="return false;" />
-                </section>
-                <section id="clipboard">
-                </section>
+                <view-input></view-input>
+                <view-results></view-results>
+                <section id="clipboard"></section>
             </div>
         </div>
     </div>
