--- a/website/index.html
+++ b/website/index.html
@@ -19,7 +19,7 @@
         <header id="header">
             <div id="header-main" class="dev-change">
                 <h1 id="mainPageTrigger">11. Sense</h1>
-                <p id="mainPageTriggerSubheadding"><span class="notranslate">Discover</span> ♡ <span class="notranslate">Learning</span></p>
+                <p id="mainPageTriggerSubheadding"><span class="notranslate">Discover</span> ♡ <span class="notranslate">Learning</span> ♡</p>
             </div>
             <figure id="header-left" class="inactive-page-icon">
                 <img id="stats-image" alt="Statistics" src="img/stats_100x100.png" />
