rename project + remove server + prep multi task

--- a/website/index.html
+++ b/website/index.html
@@ -43,8 +43,8 @@
                 <div class="subpage" id="settings-basic">
                     <ul id="basic-settings-list">
                         <li>
-                            <button disabled="true" class="option-item" title="Select your experience level.">
-                            <span class="config-label">Exercise</span><span class=" b-label-status"><select disabled="true" name="exercise-selector" id="exercise-selector" class="selector config" dir="rtl">
+                            <button disabled="true" class="option-item" title="Select your experience level.">Exercise<span
+                                class=" b-label-status"><select disabled="true" name="exercise-selector" id="exercise-selector" class="selector config" dir="rtl">
                                 <option value="-" selected="selected">-</option>
                                 <option value="level 1">level 1</option>
                                 <option value="level 2">level 2</option>
@@ -61,7 +61,7 @@
                             class="button-sub">(Manual)</span></button>
                         </li>
                         <li>
-                            <button disabled class="option-item" id="button-language-selection" title="Select your language."><div id="google_translate_element"></div></button>
+                            <button class="option-item" id="button-language-selection" title="Select your language."><div id="google_translate_element"></div></button>
                         </li>
                     </ul>
                 </div>
