rename project - part 2

--- a/website/index.html
+++ b/website/index.html
@@ -52,10 +52,10 @@
                             </select></span><br /><span
                             class="button-sub">(select configuration)</span></button>
                         </li>
-                        <li><button class="option-item" id="button-conversation" title="Talk with Dorie.">Conversation<span
+                        <li><button class="option-item" id="button-conversation" title="You can talk.">Conversation<span
                             class="hidden  b-label-status" id="button-conversation-on">on</span><span
                             id="button-conversation-off" class=" b-label-status">off</span><br /><span
-                            class="button-sub">(talk with Dorie)</span></button>
+                            class="button-sub">(listen & talk)</span></button>
                         </li>
                         <li><button type="button" disabled class="option-item" id="howToUse" title="Get an introduction about the navigation and features.">How to use<br /><span
                             class="button-sub">(Manual)</span></button>
@@ -72,10 +72,10 @@
                                     id="button-decimal-places-off" class=" b-label-status">off</span><br /><span
                                     class="button-sub">(random)</span></button>
                         </li>
-                        <li><button class="option-item" id="button-voice" title="Use voice recognition instead of keyboard input.">Dorie listens<span class="hidden  b-label-status" id="button-voice-on">on</span><span id="button-voice-off" class=" b-label-status">off</span><br /><span
-                            class="button-sub">(talk to Dorie with your voice)</span></button>
+                        <li><button class="option-item" id="button-voice" title="Use voice recognition instead of keyboard input.">You can talk<span class="hidden  b-label-status" id="button-voice-on">on</span><span id="button-voice-off" class=" b-label-status">off</span><br /><span
+                            class="button-sub">(use your voice)</span></button>
                         </li>
-                        <li><button class="option-item" id="button-sound" title="Use audio output for tasks and status feedback.">Dorie speaks<span class="hidden  b-label-status" id="sound-button-on">on</span><span id="sound-button-off" class=" b-label-status">off</span><br /><span class="button-sub">(get audio feedback for tasks)</span></button>
+                        <li><button class="option-item" id="button-sound" title="Use audio output for tasks and status feedback.">You can listen<span class="hidden  b-label-status" id="sound-button-on">on</span><span id="sound-button-off" class=" b-label-status">off</span><br /><span class="button-sub">(get audio feedback)</span></button>
                         </li>
                         <li>
                             <button class="option-item">
