implement racing mode

--- a/website/index.html
+++ b/website/index.html
@@ -143,7 +143,7 @@
                                 class="button-sub">(number of tasks)</span></button>
                             </button>
                         </li>
-                        <li><button disabled class="option-item" id="button-racing" title="Activate or deactivate the racing mode, so the following task continues at the result of the previous one.">Racing Mode<span class="hidden  b-label-status" id="button-racing-on">on</span><span id="button-racing-off" class=" b-label-status">off</span><br /><span
+                        <li><button class="option-item" id="button-racing" title="Activate or deactivate the racing mode, so the following task continues at the result of the previous one.">Racing Mode<span class="hidden  b-label-status" id="button-racing-on">on</span><span id="button-racing-off" class=" b-label-status">off</span><br /><span
                             class="button-sub">(continue at result)</span></button>
                         </li>
                         <li><button disabled class="option-item" id="button-impress" title="Print legal information and credits.">Legal Notice<br /><span
