add vertical view for racing mode

--- a/website/index.html
+++ b/website/index.html
@@ -184,6 +184,7 @@
                 <section id="task" translate="no" class="notranslate">
                     <panel-bunch-control></panel-bunch-control>
                     <view-task></view-task>
+                    <view-task-vertical></view-task-vertical>
                 </section>
                 <view-input></view-input>
                 <view-results></view-results>
