enable operator selection in config

--- a/website/index.html
+++ b/website/index.html
@@ -73,12 +73,11 @@
                 <div class="subpage" id="settings-advanced">
                     <ul id="advanced-settings-list">
                         <li>
-                            <button disabled class="option-item">Operator<span class="b-label-status"><select disabled name="operator-selector" id="operator-selector" class="selector config" dir="rtl">
-                                    <option value="?" selected="selected">?</option>
-                                    <option value="+">+</option>
-                                    <option value="-">-</option>
+                            <button class="option-item">Operator<span class="b-label-status"><select name="operator-selector" id="operator-selector" class="selector config" dir="rtl">
+                                    <option selected="selected" value="+">+</option>
+                                    <!-- <option value="-">-</option> -->
                                     <option value="*">*</option>
-                                    <option value="/">/</option>
+                                    <!-- <option value="/">/</option> -->
                                 </select></span><br /><span
                                 class="button-sub">(+,-,*, ...)</span></button>
                             </button>
