add 0 break + add hide task mode

--- a/website/index.html
+++ b/website/index.html
@@ -94,6 +94,7 @@
                         </li>
                         <li>
                             <button class="option-item">Break Length<span class="b-label-status notranslate" translate="no"><select name="auto-task-selector" id="auto-task-selector" class="selector config" dir="rtl">
+                                    <option value="0">0</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="5" selected="selected">5</option>
@@ -144,6 +145,9 @@
                         </li>
                         <li><button class="option-item" id="button-racing" title="Activate or deactivate the racing mode, so the following task continues at the result of the previous one.">Racing Mode<span class="hidden  b-label-status" id="button-racing-on">on</span><span id="button-racing-off" class=" b-label-status">off</span><br /><span
                             class="button-sub">(continue at result)</span></button>
+                        </li>
+                        <li><button class="option-item" id="button-hide-task" title="Currently only supported during the racing mode. Hide all tasks after the first by default.">Hide Tasks<span class="hidden  b-label-status" id="button-hide-task-on">on</span><span id="button-hide-task-off" class=" b-label-status">off</span><br /><span
+                            class="button-sub">(first task is visible)</span></button>
                         </li>
                         <li><button disabled class="option-item" id="button-impress" title="Print legal information and credits.">Legal Notice<br /><span
                                         class="button-sub">(Imprint)</span></button>
