speed up racing mode + more solution guide options

--- a/website/index.html
+++ b/website/index.html
@@ -112,6 +112,10 @@
                             <button class="option-item">Solution Guide<span class=" b-label-status"><select name="solution-guide-selector" id="solution-guide-selector" class="selector config" dir="rtl">
                                     <option value="off" translate="yes">off</option>
                                     <option value="5" class="notranslate" translate="no">5</option>
+                                    <option value="6" class="notranslate" translate="no">6</option>
+                                    <option value="7" class="notranslate" translate="no">7</option>
+                                    <option value="8" class="notranslate" translate="no">8</option>
+                                    <option value="9" class="notranslate" translate="no">9</option>
                                     <option value="10" class="notranslate" translate="no">10</option>
                                     <option value="15" class="notranslate" translate="no" selected="selected">15</option>
                                     <option value="20" class="notranslate" translate="no">20</option>
