update statistics with bunch features

--- a/website/index.html
+++ b/website/index.html
@@ -177,7 +177,7 @@
                 </select></h2>
                 <div class="subpage" id="stats-history">
                     <h3>Your last results:</h3>
-                    <ol reversed id="history-list">
+                    <ol reversed id="history-list" translate="no" class="notranslate">
 
                     </ol>
                 </div>
